# streamr

./: .gitignore  AGENT_SETUP_PROMPT.md  AMAZON_Q_SECURITY_IMPLEMENTATION.md  AWS_ARCHITECTURE_SECURITY_COST_REVIEW.md  CURRENT_STATUS.md  DEBUGGING_NARRATIVE.md  DEPLOYMENT_AUTOMATION_SUMMARY.md  DEPLOYMENT_TRACKER.md  DEVELOPMENT_REVIEW_AND_BACKLOG.md  ECONOMIC_VALIDATION_PLAN.md  ENDPOINT_REFERENCE.md  FIX_WSL2_NETWORKING.md  FRIEND_QUICK_START.md  FRIEND_SETUP.md  FRIEND_TESTING_INSTRUCTIONS.md  FRIEND_TEST_PROTOCOL.md  LICENSE  LIVE_ENDPOINTS.md  LOCAL_TESTING_GUIDE.md  NETWORKING_AUTOMATION_SUMMARY.md  PRAGMATIC_REMOTE_TESTING_PLAN.md  PROJECT_TRACKER.md  QUESTIONS_FOR_Q.md  README.md  REMOTE_TESTING_GUIDE.md  REPOSITORY_STRUCTURE.md  ROOT_CAUSE_ANALYSIS_DATABASE_MIGRATION_FAILURE.md  STREAMING_SETUP_CLARIFICATION.md  STREAM_LIFECYCLE_DEVELOPMENT_PLAN.md  StreamrP2P_Technical_Progress_Report.md  TESTING_SUMMARY.md  chat2.txt  competitive-analysis.md  oidc_review.md  poc-tasks.md  prompt.txt  pyproject.toml  requirements-test.txt  setup-friend-node.sh  setup-node.sh  (+5 more)
analysis/: COMPETITIVE_ANALYSIS_REPORT.md  STRATEGIC_RESEARCH_FRAMEWORK.md  strreamingresearch.md
archive/: chat1.txt  chat3.txt
coordinator/: Dockerfile  README.md  alembic.ini  database_migration_lifecycle.sql  database_performance_indexes.sql  docker-compose.test.yml  docker-compose.yml  economic_validation_migration.sql  headscale-config.yaml  init-headscale-schema.sql  requirements.txt  srs.conf  tream_id    | status |         created_at         | live_started_at | offline_at 
docs/: README.md  (+3 more)
(+185 files in other folders)
