[tool.poetry]
name = "streamr-ai-advisors-mcp"
version = "0.1.0"
description = "MCP server providing AI agent personas for StreamrP2P product consultation"
authors = ["Ian de Villiers <iddv@example.com>"]
readme = "README.md"
packages = [{include = "streamr_advisors_server.py"}]

[tool.poetry.dependencies]
python = "^3.8"
fastmcp = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
ruff = "^0.1.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
streamr-advisors = "streamr_advisors_server:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 